--- a/fig/adaptive_proposal.tex
+++ b/fig/adaptive_proposal.tex
@@ -2,8 +2,6 @@
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/Adaptive_Proposal}
   \caption[Acceptance rates of adaptive \protect\smc algorithms]
-  {Average random walk acceptance rates for the two-compartments \pet model
-    with data sets in Figure~\ref{fig:typical real pet} using adaptive
-    proposal scales}
+  {Average random walk acceptance rates for the two-compartments \pet model with data sets in Figure~\ref{fig:typical real pet} using adaptive proposal scales.}
   \label{fig:pet adaptive proposal}
 \end{figure}
