--- a/fig/cess_iter_mean.tex
+++ b/fig/cess_iter_mean.tex
@@ -3,9 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/CESS_Iter_Mean}
   \caption[Relations between average number of distributions and
   \protect\cess]
-  {Relations between average number of distributions and $\cess^\star$ for the
-    two-compartments \pet model with the simulated data set using the \smc[2]
-    algorithm. The number of distributions ranges from $\sim$30 to
-    $\sim$1,300.}
+  {Relationship between average number of distributions and $\cess^\star$ for the two-compartments \pet model with the simulated data set using the \smc[2] algorithm (on logarithm scale). The averages are calculated from 100 simulations for each sampler configuration.}
   \label{fig:cess iter mean}
 \end{figure}
