--- a/fig/fixed_proposal.tex
+++ b/fig/fixed_proposal.tex
@@ -2,8 +2,6 @@
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/Fixed_Proposal}
   \caption[Acceptance rates of non-adaptive \protect\smc algorithms]
-  {Average random walk acceptance rates for the two-compartments \pet model
-    with data sets in Figure~\ref{fig:typical real pet} using fixed proposal
-    scales.}
+  {Average random walk acceptance rates for the two-compartments \pet model with data sets in Figure~\ref{fig:typical real pet} using fixed proposal scales. The proposal scales are calibrated for a single data set other than the three shown in Figure~\ref{fig:typical real pet}. It is clear that clear that proposal scales calibrated for a single data set cannot be applied other data sets efficiently. Adaptive and automatic scheme is required in this situation.}
   \label{fig:pet fixed proposal}
 \end{figure}
