--- a/fig/pet_converge.tex
+++ b/fig/pet_converge.tex
@@ -3,8 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/PET_Converge}
   \caption[Convergence diagnostics for the random walk algorithm for the
   \protect\pet compartmental model using summary statistics]
-  {Convergence diagnostics for the three-compartments \pet using ratio of
-    variance of $V_D$ estimates using final 1,000 samples to that of all
-    10,000 post burn-in samples.}
+  {Convergence diagnostics for the three-compartments \pet using ratio of variance of $V_D$ estimates using final 1,000 samples to that of all 10,000 post burn-in samples. A value of the ratio close to one indicates that there are no apparent signs that the \mcmc algorithms do not converge well. A value within the range of $[0.9, 1.1]$ is considered to be acceptable.}
   \label{fig:pet diag ratio}
 \end{figure}
