--- a/fig/pet_mh_diag_c.tex
+++ b/fig/pet_mh_diag_c.tex
@@ -3,9 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/PET_MH_Diag_C}
   \caption[Trace and histogram of parameters in the random walk algorithm for
   the \protect\pet compartmental model (uncalibrated)]
-  {Trace and histogram plots of parameter $\theta_1$ from a \mcmc
-    sampler for \pet model with three components and non-informative priors
-    without ordering. The trace plot has 1,000 samples and the histogram plot
-    has 10,000 samples. The sampler is well calibrated.}
+  {Trace and histogram plots of parameter $\theta_1$ from a \mcmc sampler for \pet model with three components and non-informative priors without ordering. The trace plot has 1,000 samples and the histogram plot has 10,000 samples. The sampler is well calibrated.}
   \label{fig:pet diag c}
 \end{figure}
