--- a/fig/pet_mh_h_path.tex
+++ b/fig/pet_mh_h_path.tex
@@ -3,8 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/PET_MH_H_Path.pdf}
   \caption[Traces of parameters in the random walk algorithm for the
   \protect\pet compartmental model (uncalibrated)]
-  {Trace of $(\phi_1,\theta_1)$ from three random walk Metropolis-Hastings
-  samplers for the one-compartments \pet model with non-informative priors,
-  using proposal scales five times of those tuned.}
+  {Trace of $(\phi_1,\theta_1)$ from three random walk Metropolis-Hastings samplers for the one-compartments \pet model with non-informative priors, using proposal scales five times of those tuned.}
   \label{fig:pet mh untuned}
 \end{figure}
