--- a/fig/pet_mh_path.tex
+++ b/fig/pet_mh_path.tex
@@ -3,10 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/PET_MH_Path.pdf}
   \caption[Traces of parameters in the random walk algorithm for the
   \protect\pet compartmental model (calibrated)]
-  {Trace of $(\phi_1,\theta_1)$ from three random walk Metropolis-Hastings
-  samplers for the one-compartments \pet model with non-informative priors,
-  using well tuned proposal scales. The first few values of each trace is not
-  shown in the plots since they are far away from the high probability region
-  with an order of magnitude difference in values.}
+  {Trace of $(\phi_1,\theta_1)$ from three random walk Metropolis-Hastings samplers for the one-compartments \pet model with non-informative priors, using well tuned proposal scales. The first few values of each trace \dn{are} not shown in the plots since they are far away from the high probability region with an order of magnitude difference in values.}
   \label{fig:pet mh tuned}
 \end{figure}
