--- a/fig/pet_plot.tex
+++ b/fig/pet_plot.tex
@@ -4,7 +4,6 @@
   \caption
   [Volume of distribution estimates of real \protect\pet
    compartmental model data]
-  {Volume of distribution estimates of real \protect\pet
-   compartmental model data.}
+  {Volume of distribution estimates of real \protect\pet compartmental model data. Three slice of the brain are shown in the plot. Each are close to the middle of the brain along each of the three axises in the three-dimensional space.}
   \label{fig:petplot}
 \end{figure}
