--- a/fig/pet_vd.tex
+++ b/fig/pet_vd.tex
@@ -3,7 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/PET_VD}
   \caption[Convergence diagnostics for the random walk algorithm for the
   \protect\pet compartmental model using averages]
-  {Estimates of $V_D$ when starting the \mcmc chain from different
-    values for a typical data set of a \pet model with three component.}
+  {Estimates of $V_D$ when starting the \mcmc chain from different values for a typical data set of a \pet model with three component. Three slice of the brain are shown in the plot. Each are close to the middle of the brain along each of the three axises in the three-dimensional space.}
   \label{fig:pet vd mean}
 \end{figure}
