--- a/fig/vsmc_bench_ocl.tex
+++ b/fig/vsmc_bench_ocl.tex
@@ -3,8 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/bench-ocl-time-running}
   \includegraphics[width=\linewidth]{fig_src/bench-ocl-speedup-running}
   \caption[Performance of \protect\vsmc \protect\opencl implementations]
-  {Performance of \opencl implementations of Bayesian modeling for
-    Gaussian mixture model (Linux; Xeon W3550 \gpu, 3.06GHz, 4 cores, 8
-    threads; NVIDIA Quadro 2000).}
+  {Performance of \opencl implementations of Bayesian modeling for Gaussian mixture model (Linux; Xeon W3550 \gpu, 3.06GHz, 4 cores, 8 threads; NVIDIA Quadro 2000). The top plots the wall clock time against the number of particles. The bottom plots the the speedup relative the sequential implementation against the number of particles.}
   \label{fig:bench-ocl-perf}
 \end{figure}
