--- a/fig/vsmc_bench_smp.tex
+++ b/fig/vsmc_bench_smp.tex
@@ -3,7 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/bench-smp-time-running}
   \includegraphics[width=\linewidth]{fig_src/bench-smp-speedup-running}
   \caption[Performance of \protect\vsmc \protect\smp implementations]
-  {Performance of \cpp implementations of Bayesian modeling for
-    Gaussian mixture model (Linux; Xeon W3550, 3.06GHz, 4 cores, 8 threads).}
+  {Performance of \cpp implementations of Bayesian modeling for Gaussian mixture model (Linux; Xeon W3550, 3.06GHz, 4 cores, 8 threads). The top plots the wall clock time against the number of particles. The bottom plots the the speedup relative the sequential implementation against the number of particles.}
   \label{fig:bench-smp-perf}
 \end{figure}
