--- a/fig_src/MCMC_Iter_Var.tex
+++ b/fig_src/MCMC_Iter_Var.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.6.2-92-0ad2792 on 2013-11-14 18:58:53
+% Created by tikzDevice version 0.7.0 on 2014-04-07 13:10:16
 % !TEX encoding = UTF-8 Unicode
 \documentclass[12pt, mainfont = Minion,     mainscale = 1.0, sansfont = Myriad,     sansscale = MatchLowercase, monofont = Consolas,   monoscale = MatchLowercase, mathfont = MinionMath, mathscale = 1.0]{mtikzfig}
 \begin{document}
@@ -20,11 +20,14 @@
 \path[fill=fillColor] ( 42.43, 34.74) rectangle (419.17,156.33);
 \definecolor[named]{drawColor}{rgb}{0.98,0.98,0.98}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 42.43, 45.86) --
-	(419.17, 45.86);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 42.43, 64.90) --
+	(419.17, 64.90);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 42.43,119.43) --
-	(419.17,119.43);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 42.43,102.53) --
+	(419.17,102.53);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 42.43,140.16) --
+	(419.17,140.16);
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] (140.82, 34.74) --
 	(140.82,156.33);
@@ -33,11 +36,14 @@
 	(303.35,156.33);
 \definecolor[named]{drawColor}{rgb}{0.90,0.90,0.90}
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 42.43, 82.65) --
-	(419.17, 82.65);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 42.43, 46.09) --
+	(419.17, 46.09);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 42.43,156.22) --
-	(419.17,156.22);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 42.43, 83.72) --
+	(419.17, 83.72);
+
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 42.43,121.35) --
+	(419.17,121.35);
 
 \path[draw=drawColor,line width= 0.2pt,line join=round] ( 59.55, 34.74) --
 	( 59.55,156.33);
@@ -49,24 +55,24 @@
 	(384.62,156.33);
 \definecolor[named]{drawColor}{rgb}{0.97,0.46,0.43}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.55,139.37) --
-	(108.48,127.96) --
-	(157.41,115.11) --
-	(206.33, 99.95) --
-	(255.26, 82.78) --
-	(304.19, 60.44) --
-	(353.11, 49.27) --
-	(402.04, 40.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.55,141.74) --
+	(108.48,130.06) --
+	(157.41,116.93) --
+	(206.33,101.42) --
+	(255.26, 83.85) --
+	(304.19, 60.99) --
+	(353.11, 49.57) --
+	(402.04, 40.36);
 \definecolor[named]{drawColor}{rgb}{0.00,0.75,0.77}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] ( 59.55,150.80) --
-	(108.48,136.01) --
-	(157.41,123.28) --
-	(206.33,106.49) --
-	(255.26, 86.71) --
-	(304.19, 63.41) --
-	(353.11, 51.57) --
-	(402.04, 41.89);
+	(108.48,137.60) --
+	(157.41,123.50) --
+	(206.33,108.59) --
+	(255.26, 90.25) --
+	(304.19, 65.55) --
+	(353.11, 50.69) --
+	(402.04, 40.27);
 \definecolor[named]{drawColor}{rgb}{0.50,0.50,0.50}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 42.43, 34.74) rectangle (419.17,156.33);
@@ -75,19 +81,24 @@
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.80] at ( 35.32, 79.72) {0.1};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.80] at ( 35.32, 43.16) {0.01};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.80] at ( 35.32,153.29) {10.0};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.80] at ( 35.32, 80.79) {0.10};
+
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.80] at ( 35.32,118.42) {1.00};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 38.16, 82.65) --
-	( 42.43, 82.65);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 38.16, 46.09) --
+	( 42.43, 46.09);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 38.16,156.22) --
-	( 42.43,156.22);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 38.16, 83.72) --
+	( 42.43, 83.72);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 38.16,121.35) --
+	( 42.43,121.35);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
@@ -128,51 +139,51 @@
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{fillColor}{rgb}{1.00,1.00,1.00}
 
-\path[fill=fillColor] (147.52,166.40) rectangle (314.07,192.28);
+\path[fill=fillColor] (147.63,166.40) rectangle (313.97,192.28);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.80] at (151.79,176.42) {\bfseries MCMC moves per iteration};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.80] at (151.89,176.42) {\bfseries MCMC moves per iteration};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.80,0.80,0.80}
 \definecolor[named]{fillColor}{rgb}{1.00,1.00,1.00}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (258.49,170.67) rectangle (275.84,188.02);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (258.39,170.67) rectangle (275.73,188.02);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.97,0.46,0.43}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (260.23,179.34) -- (274.10,179.34);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (260.12,179.34) -- (274.00,179.34);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.80,0.80,0.80}
 \definecolor[named]{fillColor}{rgb}{1.00,1.00,1.00}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (283.00,170.67) rectangle (300.35,188.02);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (282.90,170.67) rectangle (300.25,188.02);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.00,0.75,0.77}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (284.74,179.34) -- (298.62,179.34);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (284.64,179.34) -- (298.51,179.34);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.80] at (278.00,176.42) {1};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.80] at (277.90,176.42) {1};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (433.62,216.81);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.80] at (302.52,176.42) {10};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.80] at (302.41,176.42) {10};
 \end{scope}
 \end{tikzpicture}
 
