--- a/fig_src/Typical_PET.tex
+++ b/fig_src/Typical_PET.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.6.2-92-0ad2792 on 2013-11-12 07:52:59
+% Created by tikzDevice version 0.7.0 on 2014-04-07 13:10:16
 % !TEX encoding = UTF-8 Unicode
 \documentclass[12pt, mainfont = Minion,     mainscale = 1.0, sansfont = Myriad,     sansscale = MatchLowercase, monofont = Consolas,   monoscale = MatchLowercase, mathfont = MinionMath, mathscale = 1.0]{mtikzfig}
 \begin{document}
@@ -114,6 +114,71 @@
 	(128.45, 60.02) --
 	(142.09, 60.05) --
 	(155.74, 58.78);
+\definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
+
+\path[fill=fillColor] ( 41.87, 60.15) circle (  2.13);
+
+\path[fill=fillColor] ( 42.61, 49.09) circle (  2.13);
+
+\path[fill=fillColor] ( 42.84, 82.38) circle (  2.13);
+
+\path[fill=fillColor] ( 43.06, 57.84) circle (  2.13);
+
+\path[fill=fillColor] ( 43.52, 63.35) circle (  2.13);
+
+\path[fill=fillColor] ( 44.20, 66.95) circle (  2.13);
+
+\path[fill=fillColor] ( 44.88, 67.49) circle (  2.13);
+
+\path[fill=fillColor] ( 45.56, 99.17) circle (  2.13);
+
+\path[fill=fillColor] ( 46.25, 81.10) circle (  2.13);
+
+\path[fill=fillColor] ( 46.93,102.16) circle (  2.13);
+
+\path[fill=fillColor] ( 47.61, 41.77) circle (  2.13);
+
+\path[fill=fillColor] ( 49.32, 48.11) circle (  2.13);
+
+\path[fill=fillColor] ( 52.04, 63.92) circle (  2.13);
+
+\path[fill=fillColor] ( 54.77, 68.73) circle (  2.13);
+
+\path[fill=fillColor] ( 57.50, 59.28) circle (  2.13);
+
+\path[fill=fillColor] ( 60.23, 62.46) circle (  2.13);
+
+\path[fill=fillColor] ( 62.96, 59.52) circle (  2.13);
+
+\path[fill=fillColor] ( 65.69, 57.89) circle (  2.13);
+
+\path[fill=fillColor] ( 68.42, 76.84) circle (  2.13);
+
+\path[fill=fillColor] ( 71.15, 60.24) circle (  2.13);
+
+\path[fill=fillColor] ( 73.87, 61.48) circle (  2.13);
+
+\path[fill=fillColor] ( 76.60, 68.79) circle (  2.13);
+
+\path[fill=fillColor] ( 79.33, 69.79) circle (  2.13);
+
+\path[fill=fillColor] ( 84.11, 57.79) circle (  2.13);
+
+\path[fill=fillColor] ( 90.93, 63.25) circle (  2.13);
+
+\path[fill=fillColor] ( 97.75, 60.23) circle (  2.13);
+
+\path[fill=fillColor] (104.57, 58.43) circle (  2.13);
+
+\path[fill=fillColor] (111.39, 60.62) circle (  2.13);
+
+\path[fill=fillColor] (118.22, 60.53) circle (  2.13);
+
+\path[fill=fillColor] (128.45, 60.02) circle (  2.13);
+
+\path[fill=fillColor] (142.09, 60.05) circle (  2.13);
+
+\path[fill=fillColor] (155.74, 58.78) circle (  2.13);
 \definecolor[named]{drawColor}{rgb}{0.50,0.50,0.50}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 36.18, 34.74) rectangle (161.43,189.27);
@@ -219,6 +284,71 @@
 	(257.32, 60.60) --
 	(270.96, 64.10) --
 	(284.60, 63.05);
+\definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
+
+\path[fill=fillColor] (170.74, 59.76) circle (  2.13);
+
+\path[fill=fillColor] (171.48, 63.89) circle (  2.13);
+
+\path[fill=fillColor] (171.70, 46.19) circle (  2.13);
+
+\path[fill=fillColor] (171.93,114.06) circle (  2.13);
+
+\path[fill=fillColor] (172.39,105.25) circle (  2.13);
+
+\path[fill=fillColor] (173.07, 86.55) circle (  2.13);
+
+\path[fill=fillColor] (173.75, 87.56) circle (  2.13);
+
+\path[fill=fillColor] (174.43, 90.25) circle (  2.13);
+
+\path[fill=fillColor] (175.11, 98.40) circle (  2.13);
+
+\path[fill=fillColor] (175.80,112.35) circle (  2.13);
+
+\path[fill=fillColor] (176.48, 72.60) circle (  2.13);
+
+\path[fill=fillColor] (178.18,102.91) circle (  2.13);
+
+\path[fill=fillColor] (180.91, 82.33) circle (  2.13);
+
+\path[fill=fillColor] (183.64, 84.77) circle (  2.13);
+
+\path[fill=fillColor] (186.37, 86.19) circle (  2.13);
+
+\path[fill=fillColor] (189.10, 93.23) circle (  2.13);
+
+\path[fill=fillColor] (191.83, 86.98) circle (  2.13);
+
+\path[fill=fillColor] (194.56, 89.16) circle (  2.13);
+
+\path[fill=fillColor] (197.29, 84.56) circle (  2.13);
+
+\path[fill=fillColor] (200.01, 70.85) circle (  2.13);
+
+\path[fill=fillColor] (202.74, 80.09) circle (  2.13);
+
+\path[fill=fillColor] (205.47, 91.01) circle (  2.13);
+
+\path[fill=fillColor] (208.20, 71.17) circle (  2.13);
+
+\path[fill=fillColor] (212.98, 72.51) circle (  2.13);
+
+\path[fill=fillColor] (219.80, 74.14) circle (  2.13);
+
+\path[fill=fillColor] (226.62, 69.55) circle (  2.13);
+
+\path[fill=fillColor] (233.44, 72.40) circle (  2.13);
+
+\path[fill=fillColor] (240.26, 64.47) circle (  2.13);
+
+\path[fill=fillColor] (247.08, 61.71) circle (  2.13);
+
+\path[fill=fillColor] (257.32, 60.60) circle (  2.13);
+
+\path[fill=fillColor] (270.96, 64.10) circle (  2.13);
+
+\path[fill=fillColor] (284.60, 63.05) circle (  2.13);
 \definecolor[named]{drawColor}{rgb}{0.50,0.50,0.50}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (165.04, 34.74) rectangle (290.30,189.27);
@@ -324,6 +454,71 @@
 	(386.19, 71.38) --
 	(399.83, 67.10) --
 	(413.47, 66.19);
+\definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
+
+\path[fill=fillColor] (299.60, 59.79) circle (  2.13);
+
+\path[fill=fillColor] (300.34, 45.88) circle (  2.13);
+
+\path[fill=fillColor] (300.57, 56.91) circle (  2.13);
+
+\path[fill=fillColor] (300.80, 68.04) circle (  2.13);
+
+\path[fill=fillColor] (301.25,128.07) circle (  2.13);
+
+\path[fill=fillColor] (301.94,136.05) circle (  2.13);
+
+\path[fill=fillColor] (302.62,158.83) circle (  2.13);
+
+\path[fill=fillColor] (303.30,161.81) circle (  2.13);
+
+\path[fill=fillColor] (303.98,113.97) circle (  2.13);
+
+\path[fill=fillColor] (304.66,147.00) circle (  2.13);
+
+\path[fill=fillColor] (305.35,182.25) circle (  2.13);
+
+\path[fill=fillColor] (307.05,152.83) circle (  2.13);
+
+\path[fill=fillColor] (309.78,122.23) circle (  2.13);
+
+\path[fill=fillColor] (312.51,121.12) circle (  2.13);
+
+\path[fill=fillColor] (315.24,134.65) circle (  2.13);
+
+\path[fill=fillColor] (317.97,131.92) circle (  2.13);
+
+\path[fill=fillColor] (320.70,124.93) circle (  2.13);
+
+\path[fill=fillColor] (323.42,122.98) circle (  2.13);
+
+\path[fill=fillColor] (326.15,128.88) circle (  2.13);
+
+\path[fill=fillColor] (328.88, 97.88) circle (  2.13);
+
+\path[fill=fillColor] (331.61,108.52) circle (  2.13);
+
+\path[fill=fillColor] (334.34, 87.91) circle (  2.13);
+
+\path[fill=fillColor] (337.07, 99.04) circle (  2.13);
+
+\path[fill=fillColor] (341.84, 99.18) circle (  2.13);
+
+\path[fill=fillColor] (348.67, 88.86) circle (  2.13);
+
+\path[fill=fillColor] (355.49, 93.42) circle (  2.13);
+
+\path[fill=fillColor] (362.31, 80.27) circle (  2.13);
+
+\path[fill=fillColor] (369.13, 78.63) circle (  2.13);
+
+\path[fill=fillColor] (375.95, 75.63) circle (  2.13);
+
+\path[fill=fillColor] (386.19, 71.38) circle (  2.13);
+
+\path[fill=fillColor] (399.83, 67.10) circle (  2.13);
+
+\path[fill=fillColor] (413.47, 66.19) circle (  2.13);
 \definecolor[named]{drawColor}{rgb}{0.50,0.50,0.50}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (293.91, 34.74) rectangle (419.17,189.27);
