--- a/thesis.bib
+++ b/thesis.bib
@@ -2066,7 +2066,7 @@
 @inproceedings{Zhou:2012uz,
     author = {Zhou, Yan and Johansen, Adam M. and Aston, John A. D.},
     title = {{Bayesian model selection via path-sampling sequential Monte Carlo}},
-    booktitle = {Proceedings of IEEE Statistical Signal Procesing Workshop},
+    booktitle = {Proceedings of IEEE Statistical Signal Processing Workshop},
     year = {2012}
 }
 
@@ -2242,7 +2242,7 @@
 
 @incollection{Raftery:2007ud,
     author = {Raftery, Adrian E. and Newton, Michael A. and Satagopan, Jaya M. and Krivitsky, Pavel N.},
-    title = {{Estimating the Integrated Likelihood via Posterior Simulation Using the Harmonic Mean Identity}},
+    title = {{Estimating the integrated likelihood via posterior simulation using the harmonic mean identity}},
     booktitle = {Bayesian Statistics 8},
     year = {2006},
     pages = {1--45},
@@ -2345,4 +2345,25 @@
     volume  = {1209.3198},
     pages   = {1--24},
     month   = {September}
+}
+
+@inproceedings{andrieu2012one,
+  title={One-Line Parameter Estimation in General State-Space Models Using a Pseudo-Likelihood Approach},
+  author={Andrieu, Christophe and Doucet, Arnaud and Tadic, Vladislav},
+  booktitle={System Identification},
+  volume={16},
+  number={1},
+  pages={500--505},
+  year={2012}
+}
+
+@article{andrieu2005stability,
+  title={Stability of stochastic approximation under verifiable conditions},
+  author={Andrieu, Christophe and Moulines, {\'E}ric and Priouret, Pierre},
+  journal={SIAM Journal on control and optimization},
+  volume={44},
+  number={1},
+  pages={283--312},
+  year={2005},
+  publisher={SIAM}
 }
