--- a/fig/cess_path_var.tex
+++ b/fig/cess_path_var.tex
@@ -3,8 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/CESS_Path_Var}
   \caption[Relations between the variance of the path sampling estimator and
   \protect\cess]
-  {Relations between the variance of the path sampling estimator and
-    $\cess^\star$ for the two-compartments \pet model with the simulated data
-  set using the \smc[2] algorithm.}
+  {Relationship between the variance of the path sampling estimator and $\cess^\star$ for the two-compartments \pet model with the simulated data set using the \smc[2] algorithm (on logarithm scale). The variances are calculated from 100 simulations for each sampler configuration.}
   \label{fig:cess path var}
 \end{figure}
