--- a/fig/gmm_resample.tex
+++ b/fig/gmm_resample.tex
@@ -3,9 +3,6 @@
   \includegraphics[width=\linewidth]{fig_src/GMM_Resample}
   \caption[Variance of standard standard estimator and path sampling using
   adaptive resampling]
-  {Monte Carlo variance of standard estimator and path sampling estimator
-    using different threshold of $\ess/N$ for Gaussian mixture model using the
-    \smc[2] algorithm and the stratified resampling. The variances are plotted
-    on log scale.}
+  {Monte Carlo variance of standard estimator and path sampling estimator using different threshold of $\ess/N$ for Gaussian mixture model using the \smc[2] algorithm and the stratified resampling (on logarithm scale). The variances are calculated from 100 simulations for each sampler configuration.}
   \label{fig:gmm resample}
 \end{figure}
