--- a/correction.tex
+++ b/correction.tex
@@ -19,15 +19,15 @@ The following subsections corresponds to each of the four bullet points of corre
 \subsection{Restructuring the introduction} % (fold)
 \label{sub:restructuring_the_introduction_point_1_}
 
-In Chapter~1 (pp.~4), a few paragraphs are written in the beginning to make the focus of this thesis more clear.
+In Chapter~1 (page~4), a few paragraphs are written in the beginning to make the focus of this thesis more clear.
 
-Section~1.1 (pp.~5--6), which motivated the work presented this thesis is enhanced to further emphasize that this thesis is about the use of \textsc{smc} in the context of Bayesian model comparison.
+Section~1.1 (page~5--6), which motivated the work presented this thesis is enhanced to further emphasize that this thesis is about the use of \textsc{smc} in the context of Bayesian model comparison.
 
-In Chapter~2 (pp.~9), at the beginning of the \textsc{pet} introduction, it is made clear again that it is introduced in a separate chapter only because that it is used through the thesis as a running exampling, not particular to any single following chapter or section. And this thesis is not about the analysis of \textsc{pet} in general.
+In Chapter~2 (page~9), at the beginning of the \textsc{pet} introduction, it is made clear again that it is introduced in a separate chapter only because that it is used through the thesis as a running exampling, not particular to any single following chapter or section. And this thesis is not about the analysis of \textsc{pet} in general.
 
-At the end of the first paragraph in Section~2.1 (pp.~9), it is made clear that the choice of number of compartments presents a model selection problem of interest.
+At the end of the first paragraph in Section~2.1 (page~9), it is made clear that the choice of number of compartments presents a model selection problem of interest.
 
-At the end of Section~2.2 (pp.~14), two paragraphs are written to clearly relate how the plasma input model relates to the biochemical process of interest and why the choice of the number of compartments is a model selection problem of interest.
+At the end of Section~2.2 (page~14), two paragraphs are written to clearly relate how the plasma input model relates to the biochemical process of interest and why the choice of the number of compartments is a model selection problem of interest.
 
 In the paragraph above the new addition, it is made clear that the ``massive univariate'' approach neglects spatial effects.
 
@@ -36,23 +36,23 @@ In the paragraph above the new addition, it is made clear that the ``massive uni
 \subsection{Figure captions} % (fold)
 \label{sub:figure_captions_point_2_}
 
-All captions of figures have been revised to more informatively describe the plots.
+All captions of figures have been revised to more informatively describe the plots. However, most figures are too difficult to explain in isolation. Wherever appropriate, more explanations are added in the surrounding text which is more in context.
 
-The time series plots in Figure~5.1 (pp.~108) are reproduced to include the actual observations as points.
+The time series plots in Figure~5.1 (page~109) are reproduced to include the actual observations as points.
 
 % subsection figure_captions_point_2_ (end)
 
 \subsection{Nonlinear ODE simulation} % (fold)
 \label{sub:nonlinear_ode_simulation}
 
-Table~5.6 (pp.~132) and table~5.8 (pp.~134) are added to show the results of the nonlinear \textsc{ode} model selection results. Models of order two to six are shown in the table, from the smallest possible number of components to more those models used to simulated the data. In the results part of Section~5.5.2 (pp.~130), a few sentences are written to summary the results of these two new tables.
+Table~5.6 (page~134) and table~5.8 (page~136) are added to show the results of the nonlinear \textsc{ode} model selection results. Models of order two to six are shown in the table, from the smallest possible number of components to more than those models used to simulate the data. In the results part of Section~5.5.2 (page~131), a few sentences are written to summary the results of these two new tables.
 
 % subsection nonlinear_ode_simulation (end)
 
 \subsection{Typographical and grammatical corrections} % (fold)
 \label{sub:typographical_and_grammatical_corrections}
 
-These are listed at the end of this documents
+These are listed at the end of this document.
 
 % subsection typographical_and_grammatical_corrections (end)
 
@@ -66,7 +66,7 @@ The following subsections corresponds to each of the nine bullet points of corre
 \subsection{Main focus of the thesis} % (fold)
 \label{sub:main_focus_of_the_thesis_point_1_}
 
-This has been addressed by new paragraphs in beginning of the introduction chapter
+This has been addressed by new paragraphs in beginning of the introduction chapter.
 
 % subsection main_focus_of_the_thesis_point_1_ (end)
 
@@ -80,7 +80,7 @@ In the beginning of Chapter~2, which introduce the \textsc{pet} data, a short pa
 \subsection{Derivation of CESS} % (fold)
 \label{sub:derivation_of_cess}
 
-More explanation of the derivation of the \textsc{cess} is written in Section~5.3.2 (pp.~111).
+More explanation of the derivation of the \textsc{cess} is written in Section~5.3.2 (page~112). On the facing page, it is also made clear the \textsc{cess} is merely a scaling of Exact \textsc{ess}, whose approximation is now derived in more detail. The reasoning of the scaling was in the original version and unchanged.
 
 % subsection derivation_of_cess (end)
 
@@ -94,14 +94,16 @@ Some more discussions on the choice of $\gamma$ is written. In particular, it is
 \subsection{Discussion on adaptive MCMC} % (fold)
 \label{sub:discussion_on_adaptive_mcmc}
 
-A brief discussion on the boundedness and convergence of the adaptive \textsc{mcmc} is written together with references.
+A brief discussion on the boundedness and convergence of the adaptive \textsc{mcmc} is written together with references on page 62.
 
 % subsection discussion_on_adaptive_mcmc (end)
 
 \subsection{Explanation of PET model selection plot} % (fold)
 \label{sub:explanation_of_pet_model_selection_plot}
 
-In the caption of Figure~4.7 (pp.82), It is made clear that each row shows three slice of the brain, each of which are close to the middle of the brain in the three-dimensional space.
+In the caption of Figure~4.7 (page 83) and in other similar figures, it is made clear that each row shows three slice of the brain, each of which are close to the middle of the brain along the three axises in the three-dimensional space.
+
+More explanations are added on page 82 on why the Bayesian model selection results are considered to be more plausible.
 
 % subsection explanation_of_pet_model_selection_plot (end)
 
@@ -115,12 +117,14 @@ This is also suggested by the internal examiner and addressed in the introductio
 \subsection{Example of completion} % (fold)
 \label{sub:example_of_completion}
 
+A short example of mixture model is included now (page~66). The Monte Carlo chapter is literature review chapter. And demonstrations are only provided when ``things can go wrong'' (so to clearly motivate why \textsc{smc} is desired in those situations). The example here is not elaborated in more detail and demonstrations are not provided.
+
 % subsection example_of_completion (end)
 
 \subsection{Nonlinear ODE example} % (fold)
 \label{sub:nonlinear_ode_example}
 
-This is also suggested by the internal examiner. The external examiner suggests that showing the Bayes factor estimator for all models. However, I believe a further improvement is to show the frequencies of each model being selected for two reasons. First, the accuracy of the Bayes factor estimator has being shown and discussed for two models, though not all. But the comparison of algorithms are clear. Second, showing the Bayes factor estimates for each models not really reflects the accuracy of the algorithms for the purpose of model selection. For example, if they are shown in the form of the average estimates of the Bayes factor in favor of the true model and the its simulation standard deviation, they it is not clear whether or not the true model is selected. A positive average and small standard deviation is an indicator that the model selection is accurate, but not necessarily so, especially when the Bayes factor is small and the standard deviation is non-zero (which is of course almost always).
+This is also suggested by the internal examiner. The external examiner suggests that showing the Bayes factor estimator for all models. However, I believe a further improvement is to show the frequencies of each model being selected for two reasons. First, the accuracy of the Bayes factor estimator has being shown and discussed for two models, though not all. But the comparison of algorithms are clear. Second, showing the Bayes factor estimates for each models not really reflects the accuracy of the algorithms for the purpose of model selection. For example, if they are shown in the form of the average estimates of the Bayes factor in favor of the true model and its simulation standard deviation, then it is not clear whether or not the true model is selected. A positive average and small standard deviation is an indicator that the model selection is accurate, but not necessarily so, especially when the Bayes factor is small and the standard deviation is non-zero (which is of course almost always).
 
 % subsection nonlinear_ode_example (end)
 
@@ -129,15 +133,15 @@ This is also suggested by the internal examiner. The external examiner suggests 
 \section{Typographical, grammatical and other minor corrections} % (fold)
 \label{sec:typographical_and_grammatical_corrections}
 
-In this section, I list the page numbers of typographical and grammatical corrections. When only a few letters are alternated, only the page numbers are listed. However, when never the changes are more than a few letters, or the changes are difficult to mark in the highlighted version, brief explanations are given.
+In this section, I list the page numbers of typographical and grammatical corrections. When only a few letters are alternated, only the page numbers are listed. Whenever the changes are more than a few letters, or the changes are difficult to mark in the highlighted version, brief explanations are given.
 
-There might be (very) few places I marked in the highlighted versions of the thesis but failed.
+There might be few places I marked in the highlighted version of the thesis but failed to list here or some typos I corrected before but not highlighted in the current version.
 
 Page 2. Fix a typo in the reference of the last paper.
 
 Page 3. Top.
 
-Page 6. Top.
+Page 7. Top.
 
 Page 12. Bottom. Unchanged. The notations are correct and explained in text following them immediately. The second equation is the multiplication of an $r$ elements row vector with a an $r$ elements column vector and it leads to the scalar result. The third is the initial vector. These are also the standard notations used in the \text{pet} literature as in those cited in the surrounding text.
 
@@ -145,11 +149,9 @@ Page 15. Bottom.
 
 Page 16. ``[${}^{11}C$]'' as in ``[${}^{11}$C]diprenorphine'' denotes Carbon-11 as in chemistry. It is not a typo but now made more clear in the text.
 
-Original Page 14. The figure was misplaced and now moved to Page 137.
+Original Page 14. The figure was misplaced and now moved to Page 138 where it was first referenced.
 
 Page 19. Middle.
-
-Page 22. Top.
 
 Page 23. Bottom.
 
@@ -169,6 +171,8 @@ Page 53. Middle and bottom.
 
 Page 54. Top and bottom.
 
+Page 58. Bottom.
+
 Page 59. Caption of Figure~4.1
 
 Page 60. Caption of Figure~4.2. It was intended to be ``five times of those tuned'' as said in page 58.
@@ -177,7 +181,7 @@ Page 60. Bottom.
 
 Page 64. Bottom.
 
-Page 65. Bottom. Intuitive explanation of the irreversibility of Gibbs sampler with systematic scan.
+Page 65. Middle. Intuitive explanation of the irreversibility of Gibbs sampler with systematic scan.
 
 Page 67.
 
@@ -217,7 +221,9 @@ Page 104. Top.
 
 Page 105. Bottom.
 
-Page 108.
+Page 108. Middle
+
+Page 110.
 
 Page 118. Middle
 
